<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <GridView
        android:id="@+id/galleryGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:numColumns="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/galleryCameraAppFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gallery_camera"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:rippleColor="@color/black" />
<!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/galleryOrderFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gallery_order"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:tint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />
-->
    <TextView
        android:id="@+id/galleryAlbumTitleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/gallery_album_title"
        android:textColor="#000000"
        android:textSize="20sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/galleryGridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/galleryMenuImageButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/gallery_menu"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/galleryGridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>