<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="5dp">

    <EditText
        android:id="@+id/travelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/travel_name"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/blue"
        android:fontFamily="@font/nanumsquareround_otfeb"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/red"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nanumsquareround_otfeb"
        android:text="@string/location"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/green"
        android:clickable="true"
        android:contentDescription="Enter date"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="@font/nanumsquareround_otfeb"
        android:inputType="date"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/imageListView"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelName" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imageList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/grey"
        android:layout_margin="5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="221dp"
        app:layout_constraintBottom_toTopOf="@+id/contactListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"/>

<!--   TODO: title, date 등 공간 wrap content 말고 지정 (넘어가면 어떻게할건지 정하기)    -->

    <HorizontalScrollView
        android:id="@+id/contactListView"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/purple_200"
        android:layout_margin="5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="221dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageList">

        <LinearLayout
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:fontFamily="@font/nanumsquareround_otfeb"
            android:textSize="16sp" />
    </HorizontalScrollView>

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/purple_500"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nanumsquareround_otfeb"
        android:text="@string/write"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactListView" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_button" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check_true" />


</androidx.constraintlayout.widget.ConstraintLayout>